fixed photo cutting off

--- a/Events/styles.css
+++ b/Events/styles.css
@@ -48,7 +48,7 @@
     max-width: 100%;
     height: auto;
     border-radius: 8px;
-    width:  95%;
+    width:  80%;
     height: 95%;
     object-fit: cover;
     
